<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ttvang22.loginregister.RegisterActivity">

    <EditText
        android:id="@+id/etName"
        android:layout_width="363dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="25dp" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="363dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="88dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="363dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="138dp" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="363dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="196dp" />

    <Button
        android:id="@+id/bRegister"
        android:layout_width="363dp"
        android:layout_height="50dp"
        android:text="@string/register"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="301dp" />

</android.support.constraint.ConstraintLayout>
