<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ttvang22.loginregister.LoginActivity">

    <EditText
        android:id="@+id/etUsername "
        android:layout_width="363dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="148dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="363dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="194dp" />

    <Button
        android:id="@+id/bLogin"
        android:layout_width="363"
        android:layout_height="50dp"
        android:text="@string/login"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="294dp" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="131dp"
        android:layout_height="44dp"
        android:text="@string/register_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="355dp" />
</android.support.constraint.ConstraintLayout>
