<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.ttvang22.loginregister.UserActivity">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="363dp"
        android:layout_height="50dp"
        android:text="@string/welcome"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="363dp"
        android:layout_height="50dp"
        android:text="@string/user_name"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="48dp" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="363dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="67dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="363dp"
        android:layout_height="50dp"
        android:text="@string/age"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="130dp" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="363dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="149dp" />

</android.support.constraint.ConstraintLayout>
